Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2396

ofd brw_stats not maintained

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 5686

      The per-ofd and per-export brw_stats are not maintained although the proc files still exist (see /proc/fs/lustre/obdfilter//brw_stats and /proc/fs/lustre/obdfilter//exports/*/brw_stats). Since filter_iobuf is now osd_iobuf, down one layer and without access to the export, it would be difficult to restore maintenance of these files.

      The per-ofd brw_stats file could be replaced with a symlink to ../../osd-whatever/whoever/brw_stats (as in the patch for LU-2358) but there doesn't seem to be consensus that doing so is the Right Thing.

            keith Keith Mannthey (Inactive)
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: