LU-2396 ofd: Remove unmaintained brw_stats

Remove unused nid_brw_stats member from struct nid_stat and the files
/proc/fs/lustre/obdfilter/*/{brw_stats,exports/*/brw_stats}.

Signed-off-by: John L. Hammond <jhammond@tacc.utexas.edu>
Change-Id: I79a10816c612f67b80172d679b875ca94157b5f4